Correct alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,4 +43,5 @@ p {
   font-size: 11px;
   color: white;
   background-color: dimgray;
+  text-align: left;
 }
